# actix-starter

./: .env  .env example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  cookie.txt  docker-compose.yml
migrations/: 20169611_init.sql  20261106000000_create_items_and_users.sql  setup.sql
src/: config.rs  lib.rs  main.rs
src/api/v1/: routes.rs
src/api/v1/auth/: login.rs  register.rs
src/api/v1/dashboard/: fetch.rs
src/api/v1/items/: create.rs  fetch.rs  update.rs
src/api/v1/monitoring/: external.rs  internal.rs
src/domain/auth/: model.rs
src/domain/auth/lib/: common.rs  keys.rs  validator.rs
src/domain/dashboard/: model.rs
src/domain/item/: entity.rs  model.rs
src/domain/user/: entity.rs  model.rs
src/libs/: db.rs  errors.rs  logger.rs  middleware.rs
src/libs/middleware/: redis.rs
tests/: integration_tests.rs  register_tests.rs
