[package]
name = "actix_starter"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-session = { version = "0.11", features = ["cookie-session"] }
tokio = { version = "1.32", features = ["full"] }

# Prometheus scraping instrumentation
actix-web-prometheus = "0.1"

# Serialization and Data Validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
actix-web-validator = "7"
regex = "^1.12"

# Cryptography & Auth Tokens
jsonwebtoken = "10.4"
bcrypt = "0.19"

# Database & Cache Connection Pools
sqlx = { version = "0.9", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "time",
  "uuid",
  "json",
  "migrate",
] }
time = { version = "0.3", features = [
  "serde",
  "formatting",
  "parsing",
  "macros",
] }
deadpool-redis = "0.23"
actix-request-reply-cache = "^0.1"

# Apalis background worker pipeline structures
apalis = { version = "0.7" }

# System Utilities
dotenvy = "0.15"
uuid = { version = "1.4", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
derive_more = "2.1"
futures-util = "0.3"

# Cool crates, see if fit smw
itertools = "0.15" # highly advanced functional methods 
frunk = "0.4"      # deep structural, type-level functional programming
im = "^15"         # thread-safe, blazingly fast immutable Vector, HashMap, and HashSet
